tests/specs/ecosystem/ayonli/jsext/0_8_7.test
ayonli/jsext/0.8.7
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --






























error: TS2503 [ERROR]: Cannot find namespace 'NodeJS'.
 */ export default function read<T>(target: NodeJS.EventEmitter, eventMap?: {
                                            ~~~~~~
    at file://<tmpdir>/read.ts:79:45

